[package]
name = "cli"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
sprite_dicing = { path = "../lib" }
image = { version = "0.25", default-features = false, features = [
    "rayon",
    "png",
    "webp",
    "tga",
    "dds",
    "tiff",
    "jpeg",
    "bmp"
] }
rayon = "1.10.0"
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
indicatif = "0.17"
