[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

[[test]]
name = "e2e"
path = "src/e2e.rs"

[dev-dependencies]
sprite_dicing = { path = "../lib" }
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
serde_json = "1.0"
rand = "0.8"
# TODO: Replace with std::sync::LazyLock when stabilized.
# https://github.com/rust-lang/rust/issues/109736
once_cell = "1.19"
