[package]
name = "tests"
version = "0.0.0"
edition = "2024"
publish = false

[[test]]
name = "e2e"
path = "src/e2e.rs"

[dev-dependencies]
sprite_dicing = { path = "../lib" }
cli = { path = "../cli" }
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
serde_json = "1.0"
rand = "0.9"
